	PR target/34587 	* config/darwin.h (SUPPORTS_INIT_PRIORITY): Define.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@144251 138bc75d-0d04-0410-961f-82ee72b054a4